--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -276,6 +276,11 @@
   padding: 2em;
 }
 
+.link-row * {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
 .margin-top-1 {
   margin-top: 1em;
 }
@@ -442,7 +447,7 @@
   margin-right: 0.5em;
 }
 
-.margin-horizontal-s, .link-row * {
+.margin-horizontal-s {
   margin-left: 0.5em;
   margin-right: 0.5em;
 }
