Additional modifications to enable overriding

--- a/scss/_gradients.scss
+++ b/scss/_gradients.scss
@@ -1,4 +1,8 @@
 @use 'variables';
+@use 'offsets';
+@use 'shadow';
+@use 'layout';
+@use 'z-index';
 
 %gradient {
     background: linear-gradient(135deg, variables.$alpha, variables.$secondary 25%, variables.$alpha);
