--- a/scss/_z-index.scss
+++ b/scss/_z-index.scss
@@ -1,3 +1,14 @@
+@use 'variables';
+@use 'offsets';
+@use 'shadow';
+@use 'layout';
+
+@each $value in -1, 0, 1, 2, 3, 4, 5 {
+    %z#{$value} {
+        z-index: $value;
+    }
+}
+
 @each $value in -1, 0, 1, 2, 3, 4, 5 {
     .z#{$value} {
         z-index: $value;
