--- a/scss/_shadow.scss
+++ b/scss/_shadow.scss
@@ -1,4 +1,49 @@
 @use 'variables';
+@use 'offsets';
+
+@each $value in 1, 2, 3, 4, 5 {
+    %shadow-#{$value} {
+        box-shadow: gray 0px 0px ($value + 2px) 0px;
+    }
+    
+    %shadow-up-#{$value} {
+        box-shadow: gray 0px -#{$value}px ($value + 2px) 0px;
+    }
+    
+    %shadow-down-#{$value} {
+        box-shadow: gray 0px #{$value}px ($value + 2px) 0px;
+    }
+    
+    %shadow-right-#{$value} {
+        box-shadow: gray #{$value}px 0px ($value + 2px) 0px;
+    }
+    
+    %shadow-left-#{$value} {
+        box-shadow: gray -#{$value}px 0px ($value + 2px) 0px;
+    }
+}
+
+@each $value in 1, 2, 3, 4, 5 {
+    %shadow-inset-#{$value} {
+        box-shadow: gray 0px 0px ($value + 2px) 0px inset;
+    }
+    
+    %shadow-inset-up-#{$value} {
+        box-shadow: gray 0px -#{$value}px ($value + 2px) 0px inset;
+    }
+    
+    %shadow-inset-down-#{$value} {
+        box-shadow: gray 0px #{$value}px ($value + 2px) 0px inset;
+    }
+    
+    %shadow-inset-right-#{$value} {
+        box-shadow: gray #{$value}px 0px ($value + 2px) 0px inset;
+    }
+    
+    %shadow-inset-left-#{$value} {
+        box-shadow: gray -#{$value}px 0px ($value + 2px) 0px inset;
+    }
+}
 
 @each $value in 1, 2, 3, 4, 5 {
     .shadow-#{$value} {
