--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1624,6 +1624,34 @@ h4, .h4-text {
   height: min-content;
 }
 
+.form {
+  width: 40%;
+  margin: 2em;
+  padding: 1em;
+  border-radius: 3px;
+  box-shadow: #999 0px 0px 5px 0px;
+}
+
+.form-row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 2em;
+}
+
+.form-label {
+  min-width: 7em;
+  max-width: 7em;
+  margin: 0.25em 0.5em 0.25em 0px;
+  font-size: 1rem;
+}
+
+.form-input {
+  margin: 0.25em 0px;
+}
+
 * {
   box-sizing: border-box;
 }
