Form style improvements

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,29 +1,22 @@
 @use 'variables';
+@use 'layout';
+@use 'offsets';
 
 .form {
-    width: 40%;
-    margin: 2em;
-    padding: 1em;
-    border-radius: 3px;
-    box-shadow: #999 0px 0px 5px 0px;
+    @extend .box;
+    @extend %margin-2;
+    @extend %padding-2;
 }
 
 .form-row {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+    @include layout.flex-row(space-between, flex-start);
     width: 100%;
-    min-height: 2em;
 }
 
 .form-label {
-    min-width: 7em;
-    max-width: 7em;
-    margin: 0.25em 0.5em 0.25em 0px;
-    font-size: 1rem;
+    max-width: 50%;
 }
 
 .form-input {
-    margin: 0.25em 0px;
+    max-width: 50%;
 }
