--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,7 +3,7 @@
 }
 
 .form {
-  padding: 2em;
+  padding: 1em;
 }
 
 .image {
@@ -287,6 +287,14 @@
 
 .form {
   margin: 2em;
+}
+
+.form-label {
+  margin-right: 0.5em;
+}
+
+.form-row {
+  margin: 0.5em;
 }
 
 .margin-top-1 {
@@ -1642,11 +1650,12 @@ h4, .h4-text {
 }
 
 .form-label {
-  max-width: 50%;
+  max-width: 33%;
 }
 
 .form-input {
-  max-width: 50%;
+  max-width: 67%;
+  resize: vertical;
 }
 
 * {
