--- a/scss/_offsets.scss
+++ b/scss/_offsets.scss
@@ -5,6 +5,28 @@ $directions: top, bottom, left, right;
 $offsets: ("s": variables.$s-offset, "m": variables.$m-offset, "l": variables.$l-offset, "xl": variables.$xl-offset);
 $increments: 1, 2, 3, 4, 5;
 
+$percent-increments: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+
+@each $increment in $percent-increments { 
+    %width-#{$increment} {
+        width: #{10% * $increment};
+    }
+
+    %height-#{$increment} {
+        width: #{10% * $increment};
+    }
+}
+
+@each $increment in $percent-increments { 
+    .width-#{$increment} {
+        width: #{10% * $increment};
+    }
+
+    .height-#{$increment} {
+        width: #{10% * $increment};
+    }
+}
+
 @each $type in $types {
 
     //Generate extendable offset styles that can be later overridden.
