--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,102 @@
   cursor: pointer;
 }
 
+.form-label {
+  width: 30%;
+}
+
+.form {
+  width: 50%;
+}
+
+.form-input {
+  width: 70%;
+}
+
+.form-row {
+  width: 100%;
+}
+
+.width-1 {
+  width: 10%;
+}
+
+.height-1 {
+  width: 10%;
+}
+
+.width-2 {
+  width: 20%;
+}
+
+.height-2 {
+  width: 20%;
+}
+
+.width-3 {
+  width: 30%;
+}
+
+.height-3 {
+  width: 30%;
+}
+
+.width-4 {
+  width: 40%;
+}
+
+.height-4 {
+  width: 40%;
+}
+
+.width-5 {
+  width: 50%;
+}
+
+.height-5 {
+  width: 50%;
+}
+
+.width-6 {
+  width: 60%;
+}
+
+.height-6 {
+  width: 60%;
+}
+
+.width-7 {
+  width: 70%;
+}
+
+.height-7 {
+  width: 70%;
+}
+
+.width-8 {
+  width: 80%;
+}
+
+.height-8 {
+  width: 80%;
+}
+
+.width-9 {
+  width: 90%;
+}
+
+.height-9 {
+  width: 90%;
+}
+
+.width-10 {
+  width: 100%;
+}
+
+.height-10 {
+  width: 100%;
+}
+
 .form {
   padding: 1em;
 }
@@ -283,10 +379,6 @@
 .link-row > * {
   margin-left: 1em;
   margin-right: 1em;
-}
-
-.form {
-  margin: 2em;
 }
 
 .form-label {
@@ -1646,15 +1738,9 @@ h4, .h4-text {
   align-items: flex-start;
   flex-grow: 1;
   width: 100%;
-  width: 100%;
-}
-
-.form-label {
-  max-width: 33%;
 }
 
 .form-input {
-  max-width: 67%;
   resize: vertical;
 }
 
