--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,6 +89,44 @@ body {
     min-height: 100vh;
 }
 
+.theme-selector {
+    &::before {
+        content: "Change Theme";
+        display: none;
+    }
+
+    &::after {
+        content: "#{inspect(variables.$themes)}";
+        display: none;
+    }
+
+    span {
+        z-index: 1;
+    }
+
+    select {
+        z-index: 2;
+        background-color: transparent;
+        color: transparent;
+        border: none;
+        display: block;
+        position: absolute;
+        font-family: variables.$fonts;
+        font-size: 1rem;
+        padding-left: 0.5em;
+
+        &:hover {
+            color: black;
+        }
+    }
+
+    &:hover {
+        span {
+            color: white;
+        }
+    }
+}
+
 .no-shadow {
     box-shadow: none;
 }
