--- a/scss/_gradients.scss
+++ b/scss/_gradients.scss
@@ -4,42 +4,32 @@
 @use 'layout';
 @use 'z-index';
 
-%gradient {
-    background: linear-gradient(135deg, variables.$alpha, variables.$secondary 25%, variables.$alpha);
-}
-
-%gradient-dark {
-    background: linear-gradient(135deg, variables.$alpha-dark, variables.$secondary-dark 25%, variables.$alpha-dark);
-}
-
-%gradient-hover-animation {
-    @extend %gradient;
-    background-size: 200% 200%;
-    -webkit-animation: animation-back 0.2s ease forwards;
-    -moz-animation: animation-back 0.2s ease forwards;
-    animation: animation-back 0.2s ease forwards;
-}
-
-%gradient-hover-animation-dark {
-    @extend %gradient-dark;
-    background-size: 200% 200%;
-    -webkit-animation: animation-back 0.2s ease forwards;
-    -moz-animation: animation-back 0.2s ease forwards;
-    animation: animation-back 0.2s ease forwards;
-}
-
-.gradient {
-    @extend %gradient;
-}
-
-.gradient-hover-animation {
-    @extend %gradient-hover-animation;
-}
-
-.gradient-hover-animation:hover {
-    -webkit-animation: animation-forward 0.2s ease forwards;
-    -moz-animation: animation-forward 0.2s ease forwards;
-    animation: animation-forward 0.2s ease forwards;
+@each $theme, $value in variables.$themes {
+    %gradient {
+        background: linear-gradient(135deg, variables.$alpha, darken($value, 15%) 25%, variables.$alpha);
+    }
+    
+    %gradient-hover-animation {
+        @extend %gradient;
+        background-size: 200% 200%;
+        -webkit-animation: animation-back 0.2s ease forwards;
+        -moz-animation: animation-back 0.2s ease forwards;
+        animation: animation-back 0.2s ease forwards;
+    }
+    
+    .gradient {
+        @extend %gradient;
+    }
+    
+    .gradient-hover-animation {
+        @extend %gradient-hover-animation;
+    }
+    
+    .gradient-hover-animation:hover {
+        -webkit-animation: animation-forward 0.2s ease forwards;
+        -moz-animation: animation-forward 0.2s ease forwards;
+        animation: animation-forward 0.2s ease forwards;
+    }
 }
 
 @-webkit-keyframes animation-forward {
