--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -1,6 +1,6 @@
 @use 'variables';
 
-@mixin text($size: variables.$font-size, $margin: variables.$s-offset variables.$n-offset, $color: variables.$primary-text, $weight: normal) {
+@mixin text($size: variables.$font-size, $margin: variables.$s-offset variables.$n-offset, $color: black, $weight: normal) {
     font-size: $size;
     margin: $margin;
     color: $color;
